Added link to Githup repository

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         </div>
     </div>
       </div>
-      <p class="madeBy">Made by habananah 👩🏼‍💻
+      <p class="madeBy">
+        <a href="https://github.com/habananah/my-awesome-project" target="_blank">Made by</a> habananah 👩🏼‍💻
       </p>
     </div>
 <script src="src/script.js"></script>
